--- a/style.css
+++ b/style.css
@@ -260,4 +260,5 @@ a {
   }
   .side-link { writing-mode: horizontal-tb; transform: none; margin: 0 15px; }
   
-  .main-content-grid { grid-template-columns: 1fr; } /* Одна
+  .main-content-grid { grid-template-columns: 1fr; } /* Одна */
+}
